tests/paczka1/small_fuzzy/29708972.err
Error in line 2: STQq6768Cp S446 93,6
Error in line 10: AOcnr3TdHkQ S990 8,63
